build(npm): 配置standard中的小程序的全局变量

--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "standard": {
+    "globals": [
+      "wx",
+      "getApp",
+      "Page",
+      "getCurrentPage",
+      "Component"
+    ]
   }
 }
